fix issue with footer covering page content

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,18 +1,17 @@
 footer {
-    font-family: 'Roboto Condensed', sans-serif;
-    text-align: center;
-    background-color: #626365;
-    color: white;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 100%;
+  font-family: 'Roboto Condensed', sans-serif;
+  text-align: center;
+  background-color: #626365;
+  color: white;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
 }
 
 body {
   position: relative;
   min-height: 100vh;
-  padding-bottom: 4rem;
 }
